--- a/gb/19/8/12/n11448766.md
+++ b/gb/19/8/12/n11448766.md
@@ -1,24 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tyhool308/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tyhool308/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tyhool308/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tyhool308/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】华为鸿蒙如何？任正非自曝其丑</h2>
-<a href="https://git.io/JtgFI"><img width="600" src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>图为华为创始人任正非。（大纪元资料室）
-</h6>
+<a href="https://d1qf0g0z67vzsk.cloudfront.net/M8bWVsk3h"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2019年08月13日讯】大家好，欢迎大家关注<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。</p>
-<p>上周五（8月9日），川普对媒体表示，美国不会再与<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>做生意了。他说，“不与华为做生意，事情就简单多了。”川普的一番话，让外界不仅意识到贸易战在严重升级，美中全面对抗已经趋势明显，而且已经切断了华为与美国高科技公司之间的脐带。</p>
-<h2><ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>正式发布<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E9%B8%BF%E8%92%99.md#1">鸿蒙</a>？问题还很多</h2>
-<p>几乎与此同时，华为正式发布了<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E9%B8%BF%E8%92%99.md#1">鸿蒙</a>系统，中共媒体马上表现出了“喜大普奔”的架势。中共官媒用了一个颇具煽动性的标题“鸿蒙一开天地宽，中华有为！”大肆吹嘘赞赏华为的鸿蒙系统。</p>
+	<p>【大纪元2019年08月13日讯】大家好，欢迎大家关注<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。</p>
+<p>上周五（8月9日），川普对媒体表示，美国不会再与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>做生意了。他说，“不与华为做生意，事情就简单多了。”川普的一番话，让外界不仅意识到贸易战在严重升级，美中全面对抗已经趋势明显，而且已经切断了华为与美国高科技公司之间的脐带。</p>
+<h2><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>正式发布<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B8%BF%E8%92%99.md#1">鸿蒙</a>？问题还很多</h2>
+<p>几乎与此同时，华为正式发布了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B8%BF%E8%92%99.md#1">鸿蒙</a>系统，中共媒体马上表现出了“喜大普奔”的架势。中共官媒用了一个颇具煽动性的标题“鸿蒙一开天地宽，中华有为！”大肆吹嘘赞赏华为的鸿蒙系统。</p>
 <p>不过中共官媒的吹捧，并没有影响人们对鸿蒙的质疑。这个系统到底怎么样？用户现在能不能更换系统？</p>
-<p><center><a src=""></a><a href="https://git.io/JtgFI"><img width="600" src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/8J7fKY716yU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在华为的发布会结束后，网友就在追问，自己的荣耀手机究竟能不能换成鸿蒙系统？哪怕第一次使用比安卓差一些，自己也认了。从网友急不可耐的表述，可以看出，很担心自己的华为手机成为废品。</p>
-<p>对此，大陆门户网站搜狐连发两文，提醒人们要冷静面对华为鸿蒙系统，鸿蒙“光环”背后存在着隐忧。文章直接指出，<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E4%BB%BB%E6%AD%A3%E9%9D%9E.md#1">任正非</a>都承认，解决生态系统这个问题很难，中科院也失败了。</p>
+<p><center><a src=""></a><a href="https://d1qf0g0z67vzsk.cloudfront.net/M8bWVsk3h"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/8J7fKY716yU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在华为的发布会结束后，网友就在追问，自己的荣耀手机究竟能不能换成鸿蒙系统？哪怕第一次使用比安卓差一些，自己也认了。从网友急不可耐的表述，可以看出，很担心自己的华为手机成为废品。</p>
+<p>对此，大陆门户网站搜狐连发两文，提醒人们要冷静面对华为鸿蒙系统，鸿蒙“光环”背后存在着隐忧。文章直接指出，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BB%BB%E6%AD%A3%E9%9D%9E.md#1">任正非</a>都承认，解决生态系统这个问题很难，中科院也失败了。</p>
 <p>在华为的发布会上，常务董事余承东表示，如果华为手机被禁止使用安卓系统的话，可以随时使用鸿蒙系统。他称眼下这个阶段，会把它先用在年内推出的荣耀电视智慧屏，明年推出鸿蒙2.0，后年推出3.0。他说鸿蒙在国际上的名称叫做“和谐OS系统”，可以给世界带来更多的和谐与便利。</p>
 <p>细细推敲余承东的话会发现，他对手机使用鸿蒙说得并不多，更多的是关于物联网时代的内容。</p>
 <p>无庸置疑，华为希望鸿蒙能够支持手机操作，这也是许多人在关注的一个问题。不过BBC指出，鸿蒙只是华为的一个布局，为的是物联网时代，可以用在自动驾驶、远程操作医疗环境等智能系统上。</p>
 <p>大家知道，早在2017年，华为就开始了对鸿蒙的开发研究。那个时候，美中之间并没有发生贸易战，谷歌的操作系统也没有对华为进行限制。</p>
 <p>就是说，鸿蒙系统在开发时，华为并不是用它要对抗谷歌的封锁和美国的制裁。据新浪网报导，今年7月12日华为的一个发布会上，华为董事长梁华明确表示，“鸿蒙是为物联网开发的操作系统，是不是发展为手机系统，还没有确定”，要看美国的做法。</p>
-<h2><ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E4%BB%BB%E6%AD%A3%E9%9D%9E.md#1">任正非</a>：华为尚未研发鸿蒙手机系统</h2>
+<h2><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BB%BB%E6%AD%A3%E9%9D%9E.md#1">任正非</a>：华为尚未研发鸿蒙手机系统</h2>
 <p>任正非也在7月20日对雅虎表示，鸿蒙系统可以用在很多不同的物联网应用，这是鸿蒙系统开发的根本目的。同时他表示，只有在华为不能使用安卓系统时，华为才会研发自主的手机操作系统。</p>
 <p>有不少大陆网友对华为方面的说法感到很失望：闹了半天，鸿蒙手机系统还没有研发，高调吹嘘只是应对美国制裁的一个“空城计”。站在城头上摇旗呐喊，实际什么都没有。</p>
 <p>就是说，由于美中贸易战升级，美国可能对中国断供手机安卓系统。在这个背景下，华为才表示可以用鸿蒙取代安卓。</p>
@@ -31,7 +30,7 @@
 <p>任正非在今年5月曾表示，“做一个操作系统的技术难度不大，难度大的是生态”。而要建立生态，他说至少“需要二、三年左右的时间”。搜狐指出，鸿蒙的成败与否，能不能搭建起足够强大的商业生态联盟至关重要，也是鸿蒙能不能真正活下去的关键。</p>
 <p>中途改装的鸿蒙，能突破这个难关吗？非常值得怀疑。早在1983年，倪光南曾主导开放汉字图形微机系统，时任中科院软件所副所长孙玉芳也曾主持开发的一个系统，2008年中国移动曾推出首款国产移动操作系统OMS，中国联通也曾开发“沃Phone”等等。但最终都失败了，都倒在了生态建立的这条路上，</p>
 <p>就是说，虽然中共鼓动民族情绪，让人们对鸿蒙系统寄予厚望。但鸿蒙的实际运营能力，要看它在手机系统上的真实表现。当鸿蒙不尽人意的时候，舆论激起的爱国情绪估计就会降温冷却。搜狐这么评论，就像是一个气球，人们使劲的吹，当它被吹得越大，“它爆炸的风险也随之上升”。</p>
-<p>好的，感谢您关注<ahref="https://github.com/tyhool308/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，再会。</p>
+<p>好的，感谢您关注<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，再会。</p>
 <p>大纪元《新闻看点》制作组? #</p>
 <p>责任编辑：李昊</p>
 	
@@ -39,41 +38,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/19/5/20/n11268372.md#1">想用鸿蒙取代安卓 华为难过两大关</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/19/5/27/n11283299.md#1">【新闻看点】挑战谷歌安卓？任正非说大话被揭</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/19/5/27/n11283643.md#1">分析：华为鸿蒙欲取代Android几无胜算</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/19/5/28/n11285883.md#1">备胎变废胎 CEO：华为海外手机业务已死</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/20/n11268372.md#1">想用鸿蒙取代安卓 华为难过两大关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/27/n11283299.md#1">【新闻看点】挑战谷歌安卓？任正非说大话被揭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/27/n11283643.md#1">分析：华为鸿蒙欲取代Android几无胜算</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/28/n11285883.md#1">备胎变废胎 CEO：华为海外手机业务已死</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113058.md#1" target="_blank">一位农家女的奇异经历</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733732.md#1">【解密时分】诺查丹玛斯预言：君主制回归</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733977.md#1">【秦鹏直播】脱钩or合作？拜登首发对华政策</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733627.md#1">【新闻看点】拜登首谈外交回击中共 北京低调？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733732.md#1">【解密时分】诺查丹玛斯预言：君主制回归</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728421.md#1">分析：窃取党和国家权力 习的政敌是谁</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12729074.md#1">【时事纵横】拜政府菜鸟级失误 中共促缅政变？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12730621.md#1">两岸十大政治人物排名 朱镕基居首习近平靠后</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733732.md#1">【解密时分】诺查丹玛斯预言：君主制回归</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12731188.md#1">林依晨聚餐提前离席 雷佳音得知背后原因惊呆</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733680.md#1">向周星驰讨天价佣金败诉 于文凤爆闪婚富三代</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12726885.md#1">立春要晚睡早起 吃2类食材升阳气又散寒</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12731595.md#1">打喷嚏未必是坏事？起床做1件事 远离过敏性鼻炎</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12729496.md#1">缅甸女子拍跳舞短片 不知身后发生军事政变</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12729103.md#1">检测海鲜、冰棒病毒有用吗？新冠检测3大疑问</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12727440.md#1">【重播】新冠1个症状藏大隐患 一定要警惕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/12/n11448766.htm">【新闻看点】华为鸿蒙如何？任正非自曝其丑</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/12/n11448766.htm">【新闻看点】华为鸿蒙如何？任正非自曝其丑</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tyhool308/djy/blob/master/gb/19/8/12/n11448766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tyhool308/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tyhool308/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tyhool308/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/8/12/n11448766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
